--- a/src/main/resources/assets/ma/lang/en_us.json
+++ b/src/main/resources/assets/ma/lang/en_us.json
@@ -1,4 +1,5 @@
 {
     "item.ma.speedarrow":"Speed Arrow",
-    "item.ma.boltarrow":"Bolt Arrow"
+    "item.ma.boltarrow":"Bolt Arrow",
+    "item.ma.explodearrow":"Explode Arrow"
 }
