--- a/src/main/resources/assets/ma/lang/en_us.json
+++ b/src/main/resources/assets/ma/lang/en_us.json
@@ -2,5 +2,6 @@
     "item.ma.speedarrow":"Speed Arrow",
     "item.ma.boltarrow":"Bolt Arrow",
     "item.ma.explodearrow":"Explode Arrow",
+    "item.ma.killerarrow":"Killer Arrow",
     "block.ma.supertnt":"Super TNT Block"
 }
